...
                    Icon(
                       _currentNote?.isPinned == true ? Icons.push_pin_outlined : Icons.push_pin_rounded, 
                       color: AppColors.textPrimary
                    ),
                    const SizedBox(width: 8),
                    Text(
                      _currentNote?.isPinned == true ? 'Unpin' : 'Pin',
                      style: const TextStyle(color: AppColors.textPrimary)
                    ),
                  ],
                ),
              ),
              PopupMenuItem(
...
